test_suite/alan-2022-examples/failing/004130_mutation.alan
source W begin leave + (6) end
